--- a/programming_academy_最終課題/css/style.css
+++ b/programming_academy_最終課題/css/style.css
@@ -33,11 +33,11 @@ align-items: center;
   margin-left: 25%;
   margin-right: 25%;
   position: relative;
-  top: -30px;
+  top: -35px;
 }
 
 .menu{
-  font-size: 12.5px;
+  font-size: 14px;
 }
 
 .contact_box{
@@ -49,12 +49,256 @@ align-items: center;
   justify-content: center;
   align-items: center;
   position: relative;
-  top: -67px;
+  top: -75px;
   left: 80%;
 }
 
 .contact_text{
   color: white;
-  font-size: 12.5px;
+  font-size: 14px;
   font-weight: bold;
+}
+
+.image_wrapper{
+  display: flex;
+  justify-content: center;
+  position: relative;
+  top: -60px;
+}
+
+.wrapper_blue{
+  background-color: #00008b;
+  width: 90%;
+  height: 230px;
+  display: flex;
+  margin: auto;
+  position: relative;
+  top: -70px;
+}
+
+.background_blue{
+  width: 70%;
+  height: 200px;
+  margin: auto;
+  margin-top: 0px;
+  position: relative;
+  top: -10px;
+}
+
+.phrase_1{
+  color: white;
+  font-size: 20px;
+  letter-spacing: 7px;
+  text-align: center;
+}
+
+.label{
+  background-color: #FFFFBB;
+  width: 70%;
+  height: 20%;
+  margin: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.phrase_2{
+  color: #EE0000;
+  font-size: 20px;
+  letter-spacing: 7px;
+}
+
+.empha{
+  font-size: 24px;
+}
+
+.phrase_3{
+  color: white;
+  font-size: 20px;
+  letter-spacing: 5px;
+  text-align: center;
+}
+
+.box_wrapper{
+  display: flex;
+  justify-content: space-between;
+  width: 70%;
+  margin: auto;
+}
+
+.box{
+  background-color: #EE0000;
+  width: 80px;
+  height: 50px;
+  border-radius: 10px;
+}
+
+.keyword{
+  color: white;
+  font-size: 14px;
+  letter-spacing: 2px;
+  text-align: center;
+  vertical-align: middle;
+  margin: 5px 0px 0px 0px;
+}
+
+.banner_wrapper{
+  width: 30%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.banner_box{
+  background-color: #666666;
+  width: 300px;
+  height: 180px;
+  border-radius: 10px;
+  text-align: center;
+}
+
+.banner_text{
+  color: white;
+  font-size: 18px;
+  font-weight: bold;
+  }
+
+.background_car{
+  background-color: #FFFFEE;
+  margin: 0px;
+  width: 100%;
+  height: 500px;
+  position: relative;
+  top: -100px;
+}
+
+.car_text{
+  color: #EE0000;
+  font-weight: bold;
+  font-size: 28px;
+  height: 30px;
+  text-align: center;
+  padding-top: 30px;
+  margin-bottom: 15px;
+}
+
+.product-title-image{
+  display: flex;
+  justify-content: center;
+}
+
+.product_wrapper{
+  width: 80%;
+  margin: auto;
+  margin-top: 20px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.price{
+  color: #EE0000;
+  font-weight: bold;
+  font-size: 12px;
+  margin: 0px;
+  text-align: right;
+}
+
+.info1{
+  margin: 0px;
+  font-weight: bold;
+}
+
+.info2{
+  margin: 0px;
+}
+
+.name{
+  font-size: 12.5px;
+  width: 20%;
+  text-align: center;
+}
+
+.namebox{
+  width: 50%;
+  height: 30px;
+  background-color: #CCCCCC;
+  border: 0px solid;
+}
+
+.name_wrapper{
+  display: flex;
+  margin: auto;
+  align-items: center;
+  width: 40%;
+  margin-bottom: 10px;
+}
+
+.mail{
+  font-size: 12.5px;
+  width: 20%;
+  text-align: center;
+}
+
+.mailbox{
+  width: 50%;
+  height: 30px;
+  background-color: #CCCCCC;
+  border: 0px solid;
+}
+
+.mail_wrapper{
+  display: flex;
+  margin: auto;
+  align-items: center;
+  width: 40%;
+  margin-bottom: 10px;
+}
+
+.textarea{
+  font-size: 12.5px;
+  width: 20%;
+  text-align: center;
+}
+
+.textareabox{
+  width: 50%;
+  height: 150px;
+  background-color: #CCCCCC;
+  border: 0px solid;
+}
+
+.textarea_wrapper{
+  display: flex;
+  margin: auto;
+  align-items: center;
+  width: 40%;
+}
+
+.submit{
+  background-color: #f74f05;
+  border-radius: 10px;
+  width: 15%;
+  height: 30px;
+  border: 0px solid;
+  color: white;
+  font-size: 12.5px;
+  margin: auto;
+  display: block;
+  margin-top: 10px;
+}
+
+.contact_section{
+  position: relative;
+  top: -70px;
+}
+
+.footer_line{
+  background-color: #00008b;
+  margin: 0px;
+}
+
+.footer_text{
+  color: white;
+  font-size: 10px;
+  margin: 0px;
 }
